[project]
name = "machine_learning"
version = "0.1.0"
description = "machine learning projects"
authors = [{ name = "Andrean Georgiev" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"

dependencies = ["pandas (>=2.2.3,<3.0.0)", "numpy (>=2.2.4,<3.0.0)", "seaborn (>=0.13.2,<0.14.0)", "matplotlib (>=3.10.1,<4.0.0)", "jupyter (>=1.1.1,<2.0.0)", "ipykernel (>=6.29.5,<7.0.0)"]  # Add dependencies here if needed

[build-system]
requires = ["poetry-core>=0.2.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
